[scenario_api_simulator] Initial port based on sed script
Build fails due to unported dependency on npc_simulator

--- a/api/scenario_api_simulator/package.xml
+++ b/api/scenario_api_simulator/package.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" ?>
-<package format="2">
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>scenario_api_simulator</name>
   <version>0.0.0</version>
   <description>The scenario_api_simulator package</description>
@@ -7,7 +8,7 @@
   <author email="tomoya.kimura@tier4.jp">Tomoya Kimura</author>
   <license>Apache 2</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
@@ -17,7 +18,7 @@
   <depend>autoware_perception_msgs</depend>
   <depend>autoware_vehicle_msgs</depend>
   <depend>npc_simulator</depend>
-  <depend>roscpp</depend>
+  <depend>rclcpp</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>pcl_ros</depend>
@@ -25,4 +26,7 @@
   <depend>tf2_geometry_msgs</depend>
   <depend>lanelet2_extension</depend>
   <depend>scenario_api_utils</depend>
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
