--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -15,6 +15,9 @@ jobs:
     - name: Check out repo
       uses: actions/checkout@v2
 
+    - name: Clone dependency packages
+      run: mkdir dependency_ws && vcs import dependency_ws < build_depends.repos
+
     - name: Install missing dependencies
       run: rosdep update && DEBIAN_FRONTEND=noninteractive sudo rosdep install --from-paths . --ignore-src --rosdistro foxy -y
 
