fix rosdep in gihub workflow
Signed-off-by: mitsudome-r <ryohsuke.mitsudome@tier4.jp>

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -19,7 +19,10 @@ jobs:
       run: mkdir dependency_ws && vcs import dependency_ws < build_depends.repos
 
     - name: Install missing dependencies
-      run: rosdep update && DEBIAN_FRONTEND=noninteractive sudo rosdep install --from-paths . --ignore-src --rosdistro foxy -y
+      run: |
+        sudo apt update
+        rosdep update
+        DEBIAN_FRONTEND=noninteractive rosdep install --from-paths . --ignore-src --rosdistro foxy -y
 
     - name: Build
       run: . /opt/ros/foxy/setup.sh && colcon build --event-handlers console_cohesion+
