--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -16,7 +16,14 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Clone dependency packages
-      run: mkdir dependency_ws && vcs import dependency_ws < build_depends.repos
+      run: |
+        mkdir dependency_ws 
+        vcs import dependency_ws < build_depends.repos
+
+    - name: Upgrade ros packages
+      run: |
+        apt update
+        apt upgrade
 
     - name: Install missing dependencies
       run: |
@@ -25,7 +32,11 @@ jobs:
         DEBIAN_FRONTEND=noninteractive rosdep install --from-paths . --ignore-src --rosdistro foxy -y
 
     - name: Build
-      run: . /opt/ros/foxy/setup.sh && colcon build --event-handlers console_cohesion+
+      run: |
+        . /opt/ros/foxy/setup.sh
+        colcon build --event-handlers console_cohesion+
 
     - name: Run tests
-      run: . /opt/ros/foxy/setup.sh && colcon test --event-handlers console_cohesion+
+      run: |
+        . /opt/ros/foxy/setup.sh
+        colcon test --event-handlers console_cohesion+
