add -y option to apt upgrade in CI
Signed-off-by: mitsudome-r <ryohsuke.mitsudome@tier4.jp>

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Upgrade ros packages
       run: |
         apt update
-        apt upgrade
+        apt upgrade -y
 
     - name: Install missing dependencies
       run: |
