--- a/api/scenario_api_simulator/package.xml
+++ b/api/scenario_api_simulator/package.xml
@@ -22,6 +22,8 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>unique_identifier_msgs</depend>
+  <!-- TODO: This is not a dependency, only a workaround for build problems -->
+  <depend>vehicle_info_util</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
