--- a/npc_simulator/CMakeLists.txt
+++ b/npc_simulator/CMakeLists.txt
@@ -9,18 +9,25 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wno-unused-parameter -Wall -Wextra -Wpedantic)
 endif()
 
+# needs to invoke `find_package` manually to make `ament_auto_find_build_dependencies` available
 find_package(ament_cmake_auto REQUIRED)
-ament_auto_find_build_dependencies()
 
+# we require all dependencies but by default ament_auto_find_build_dependencies doesn't require packages
+ament_auto_find_build_dependencies(REQUIRED
+  ${${PROJECT_NAME}_BUILD_DEPENDS}
+  ${${PROJECT_NAME}_BUILDTOOL_DEPENDS}
+)
+
+###
 # message generation
-
+###
 set(msg_files
   msg/LaneChangeDir.msg
   msg/LaneFollowMode.msg
   msg/Object.msg
 )
 set(service_files
-    srv/GetObject.srv
+  srv/GetObject.srv
 )
 set(msg_dependencies
   autoware_perception_msgs
@@ -36,60 +43,54 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   )
 ament_export_dependencies(rosidl_default_runtime)
 
-# ament_auto_add_library(${PROJECT_NAME}_node STATIC src/node.cpp)
-# target_link_libraries(${PROJECT_NAME}_node "${Boost_LIBRARY_DIR}")
-# ament_target_dependencies(${PROJECT_NAME}_node Boost)
+###
+# create library
+###
 add_library(${PROJECT_NAME}_node STATIC src/node.cpp)
 target_link_libraries(${PROJECT_NAME}_node "${Boost_LIBRARY_DIR}")
-
 target_include_directories(${PROJECT_NAME}_node PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>
-  )
-target_include_directories(${PROJECT_NAME}_node PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_BIN_DIR}/rosidl_generator_cpp>
   $<INSTALL_INTERFACE:include>
   )
-ament_target_dependencies(${PROJECT_NAME}_node
-  autoware_lanelet2_msgs
-  autoware_perception_msgs
-  Boost
-  dummy_perception_publisher
-  lanelet2_extension
-  rclcpp
-  sensor_msgs
-  std_msgs
-  tf2
-  tf2_geometry_msgs
-  tf2_ros
-  unique_identifier_msgs
-  vehicle_info_util
-  )
 
-ament_auto_add_executable(${PROJECT_NAME}_main
-  src/main.cpp
+# capitalize the boost dependency
+set(node_deps ${${PROJECT_NAME}_BUILD_DEPENDS})
+list(REMOVE_ITEM node_deps boost)
+list(APPEND node_deps Boost)
+
+ament_target_dependencies(${PROJECT_NAME}_node
+  ${node_deps}
 )
-target_link_libraries(${PROJECT_NAME}_main ${PROJECT_NAME}_node)
 
 # to allow using interfaces created in this package
 rosidl_target_interfaces(${PROJECT_NAME}_node
   ${PROJECT_NAME} "rosidl_typesupport_cpp"
 )
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  ament_lint_auto_find_test_dependencies()
-endif()
-
 # export targets because rosidl automatically exports targets so relying on old-style variables fails in client
 # packages; e.g. the include directories for dependencies of this packages are not taken over. So we cannot use
 # `ament_auto_package()`
 ament_export_targets(export_${PROJECT_NAME}_node HAS_LIBRARY_TARGET)
 
-install(
-  DIRECTORY include/
-  DESTINATION include
+###
+# create executable
+###
+ament_auto_add_executable(${PROJECT_NAME}_main
+  src/main.cpp
 )
+target_link_libraries(${PROJECT_NAME}_main ${PROJECT_NAME}_node)
+
+
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+endif()
+
+# install(
+#   DIRECTORY include/
+#   DESTINATION include
+# )
 
 install(
   TARGETS ${PROJECT_NAME}_node
@@ -100,11 +101,4 @@ install(
   INCLUDES DESTINATION include
 )
 
-# TODO port to ament_package
-# ament_auto_package(
-#   INSTALL_TO_SHARE launch
-# )
-ament_package(
-)
-
-message("targets: ${${PROJECT_NAME}_TARGETS}")
+ament_auto_package(INSTALL_TO_SHARE launch)
