--- a/rviz_plugin/npc_simulator_rviz_plugin/package.xml
+++ b/rviz_plugin/npc_simulator_rviz_plugin/package.xml
@@ -8,21 +8,21 @@
   <license>Apache2</license>
 
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>qtbase5-dev</build_depend>
-  <build_depend>rviz</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>npc_simulator</build_depend>
-
-  <exec_depend>libqt5-core</exec_depend>
-  <exec_depend>libqt5-gui</exec_depend>
-  <exec_depend>libqt5-widgets</exec_depend>
-  <exec_depend>rviz</exec_depend>
-  <exec_depend>tf</exec_depend>
-  <exec_depend>npc_simulator</exec_depend>
+  <depend>qtbase5-dev</depend>
+  <depend>libqt5-core</depend>
+  <depend>libqt5-gui</depend>
+  <depend>libqt5-widgets</depend>
+  <depend>rviz_common</depend>
+  <depend>rviz_default_plugins</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>npc_simulator</depend>
+  <depend>autoware_perception_msgs</depend>
 
   <export>
+    <build_type>ament_cmake</build_type>
     <rviz plugin="${prefix}/plugins/plugin_description.xml" />
   </export>
 </package>
