--- a/npc_simulator/package.xml
+++ b/npc_simulator/package.xml
@@ -29,7 +29,11 @@
   <exec_depend>lexus_description</exec_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
 
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
   <member_of_group>rosidl_interface_packages</member_of_group>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
