--- a/rviz_plugin/npc_simulator_rviz_plugin/package.xml
+++ b/rviz_plugin/npc_simulator_rviz_plugin/package.xml
@@ -21,6 +21,9 @@
   <depend>npc_simulator</depend>
   <depend>autoware_perception_msgs</depend>
 
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
     <rviz plugin="${prefix}/plugins/plugin_description.xml" />
