--- a/api/scenario_api_simulator/package.xml
+++ b/api/scenario_api_simulator/package.xml
@@ -11,6 +11,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>autoware_lanelet2_msgs</depend>
+  <depend>autoware_vehicle_msgs</depend>
   <depend>autoware_perception_msgs</depend>
   <build_depend>dummy_perception_publisher</build_depend>
   <depend>geometry_msgs</depend>
@@ -19,7 +20,6 @@
   <depend>rclcpp</depend>
   <build_depend>scenario_api_utils</build_depend>
   <depend>sensor_msgs</depend>
-  <depend>std_msgs</depend>
   <build_depend>tf2</build_depend>
   <depend>unique_identifier_msgs</depend>
 
